adds sidebar and topbar

--- a/index.html
+++ b/index.html
@@ -13,17 +13,49 @@
 
         <div class="dsp-flex flex-grow">
             <!-- SIDEBAR -->
-            <div class="bg-black fontwhite">
-                <div class="home">HOME</div>
-                <div class="playlist">NUOVA PLAYLIST</div>
-                <div class="user">TRUSIMO</div>
+            <div class="sidebar bg-black fontwhite">
+                <div class="home">
+                    <div>
+                        <img class="logo" src="img/logo.svg">
+                    </div>
+                    <div>
+                        <div class="fontsmall fontgrey"><img class="side-icons" src="img/home.svg" alt="">Home</div>
+                        <div class="fontsmall fontgrey"><img class="side-icons" src="img/search.svg" alt="">Cerca</div>
+                        <div class="fontsmall fontgrey"><img class="side-icons" src="img/libreria.svg" alt="">La tua libreria</div>
+                    </div>
+                </div>
+                <div class="playlist">
+                    <div class="fontwhite">PLAYLIST</div>
+                    <div class="new-playlist">
+                        <div class="plus-bg fontblack"><i class="fa-solid fa-plus"></i></div>
+                        <span class="fontgrey">Crea playlist</span>
+                    </div>
+                    <ul class="list-none fontgrey">
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                    </ul>
+                </div>
+                <div class="user">
+                    <div class="dsp-flex fontgrey fontsmall">
+                        <span class="arrow-bg"><i class="fa-solid fa-arrow-down"></i></span><span>Installa app</span>
+                    </div>
+                    <hr>
+                    <div class="dsp-flex fontwhite">
+                        <span class="user-bg"><i class="fa-solid fa-user"></i></span><span>John Doe</span>
+                    </div>
+                </div>
             </div>
 
         <!-- MENU -->
             <div class="dsp-flex flex-grow flex-col bg-blue fontwhite">
                 <!-- BARRA IN ALTO -->
-                <div class="flex-shrink">
-                    SCOPRISCOPRISCOPRI
+                <div class="top-bar bg-blue-2">
+                    <span class="upgrade fontsmall">EFFETTUA L'UPGRADE</span>
                 </div>
                 <!-- MUSICA -->
                 <div class="flex-grow overflow">
@@ -33,7 +65,7 @@
         </div>
 
         <!-- PLAYER -->
-        <div class="bg-black flex-shrink fontwhite">
+        <div class="bg-grey flex-shrink fontwhite">
             PLAYPLAYPLAY
         </div>
     </div>
