adds main structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Spotify</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="icon" href="img/favicon.ico">
 </head>
+
 <body>
     <div class="container-100">
 
@@ -58,8 +60,56 @@
                     <span class="upgrade fontsmall">EFFETTUA L'UPGRADE</span>
                 </div>
                 <!-- MUSICA -->
-                <div class="flex-grow overflow">
-                    ARTISTA ARTISTA ARTISTA
+                <div class="flex-grow overflow padding-main">
+                    <div class="navbar fontgrey fontsmall">
+                        <span>IN EVIDENZA</span>
+                        <span>PODCAST</span>
+                        <span>CLASSIFICHE</span>
+                        <span>GENERI E MOOD</span>
+                        <span>NUOVE USCITE</span>
+                        <span>SCOPRI</span>
+                    </div>
+                    <h2 class="fontwhite">Recently Played</h2>
+                    <div class="flex-music">
+                        <div class="music-card">
+
+                        </div>
+                        <div class="music-card">
+
+                        </div>
+                        <div class="music-card">
+
+                        </div>
+                        <div class="music-card">
+
+                        </div>
+                        <div class="music-card">
+
+                        </div>
+                        <div class="music-card">
+
+                        </div>
+                    </div>
+                    <h2 class="fontwhite">Creato per John Doe</h2>
+                    <span class="fontgrey fontsmall">Più ascolti, più accurati saranno i suggerimenti</span>
+                    <div class="flex-music">
+                        <div class="music-card">
+
+                        </div>
+                        <div class="music-card">
+
+                        </div>
+                    </div>
+                    <h2 class="fontwhite">Artisti più popolari</h2>
+                    <span class="fontgrey fontsmall">Più ascolti, più saranno accurati i tuoi suggerimenti</span>
+                    <div class="flex-music">
+                        <div class="music-card">
+
+                        </div>
+                        <div class="music-card">
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
