music played section

--- a/index.html
+++ b/index.html
@@ -71,23 +71,47 @@
                     </div>
                     <h2 class="fontwhite">Recently Played</h2>
                     <div class="flex-music">
-                        <div class="music-card">
-
+                        <div class="card-music-played">
+                            <div class="music-div">
+                                <img class="music-img" src="img/metal_lifting.jpg">
+                            </div>
+                            <div class="fontwhite">Heavy Metal</div>
+                            <div class="fontgrey fontsmall">Subtitle</div>
                         </div>
-                        <div class="music-card">
-
+                        <div class="card-music-played">
+                            <div class="music-div">
+                                <img class="music-img" src="img/stranger.jpeg">
+                            </div>
+                            <span class="fontwhite">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</span>
+                            <span class="fontgrey fontsmall">Kyle Dixon & Michael Stein</span>
                         </div>
-                        <div class="music-card">
-
+                        <div class="card-music-played">
+                            <div class="music-div">
+                                <img class="music-img" src="img/aquietplace.jpeg">
+                            </div>
+                            <span class="fontwhite">A quiet place</span>
+                            <span class="fontgrey fontsmall">Subtitle</span>
                         </div>
-                        <div class="music-card">
-
+                        <div class="card-music-played">
+                            <div class="music-div">
+                                <img class="music-img" src="img/split.jpeg">
+                            </div>
+                            <span class="fontwhite">Split</span>
+                            <span class="fontgrey fontsmall">Subtitle</span>
                         </div>
-                        <div class="music-card">
-
+                        <div class="card-music-played">
+                            <div class="music-div">
+                                <img class="music-img" src="img/cure.jpeg">
+                            </div>
+                            <span class="fontwhite">A cure for wellness</span>
+                            <span class="fontgrey fontsmall">Subtitle</span>
                         </div>
-                        <div class="music-card">
-
+                        <div class="card-music-played">
+                            <div class="music-div">
+                                <img class="music-img" src="img/sinister.jpeg">
+                            </div>
+                            <span class="fontwhite">Sinister</span>
+                            <span class="fontgrey fontsmall">Subtitle</span>
                         </div>
                     </div>
                     <h2 class="fontwhite">Creato per John Doe</h2>
