--- a/index.html
+++ b/index.html
@@ -72,42 +72,42 @@
                     <h2 class="fontwhite">Recently Played</h2>
                     <div class="flex-music">
                         <div class="card-music-played">
-                            <div class="music-div">
+                            <div>
                                 <img class="music-img" src="img/metal_lifting.jpg">
                             </div>
                             <div class="fontwhite">Heavy Metal</div>
                             <div class="fontgrey fontsmall">Subtitle</div>
                         </div>
                         <div class="card-music-played">
-                            <div class="music-div">
+                            <div>
                                 <img class="music-img" src="img/stranger.jpeg">
                             </div>
                             <span class="fontwhite">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</span>
                             <span class="fontgrey fontsmall">Kyle Dixon & Michael Stein</span>
                         </div>
                         <div class="card-music-played">
-                            <div class="music-div">
+                            <div>
                                 <img class="music-img" src="img/aquietplace.jpeg">
                             </div>
                             <span class="fontwhite">A quiet place</span>
                             <span class="fontgrey fontsmall">Subtitle</span>
                         </div>
                         <div class="card-music-played">
-                            <div class="music-div">
+                            <div>
                                 <img class="music-img" src="img/split.jpeg">
                             </div>
                             <span class="fontwhite">Split</span>
                             <span class="fontgrey fontsmall">Subtitle</span>
                         </div>
                         <div class="card-music-played">
-                            <div class="music-div">
+                            <div>
                                 <img class="music-img" src="img/cure.jpeg">
                             </div>
                             <span class="fontwhite">A cure for wellness</span>
                             <span class="fontgrey fontsmall">Subtitle</span>
                         </div>
                         <div class="card-music-played">
-                            <div class="music-div">
+                            <div>
                                 <img class="music-img" src="img/sinister.jpeg">
                             </div>
                             <span class="fontwhite">Sinister</span>
@@ -117,21 +117,33 @@
                     <h2 class="fontwhite">Creato per John Doe</h2>
                     <span class="fontgrey fontsmall">Più ascolti, più accurati saranno i suggerimenti</span>
                     <div class="flex-music">
-                        <div class="music-card">
-
+                        <div class="card-music-played">
+                            <div>
+                                <img class="music-img" src="img/radar.jpeg">
+                            </div>
+                            <div class="fontwhite">Release Radar</div>
                         </div>
-                        <div class="music-card">
-
+                        <div class="card-music-played">
+                            <div>
+                                <img class="music-img" src="img/mixdaily.jpeg">
+                            </div>
+                            <div class="fontwhite">Daily Mix 1</div>
                         </div>
                     </div>
                     <h2 class="fontwhite">Artisti più popolari</h2>
                     <span class="fontgrey fontsmall">Più ascolti, più saranno accurati i tuoi suggerimenti</span>
                     <div class="flex-music">
-                        <div class="music-card">
-
+                        <div class="card-music-played">
+                            <div>
+                                <img class="music-img" src="img/youg.jpeg">
+                            </div>
+                            <div class="fontwhite">Lana Del Rey</div>
                         </div>
-                        <div class="music-card">
-
+                        <div class="card-music-played">
+                            <div>
+                                <img class="music-img" src="img/einaudi.jpeg">
+                            </div>
+                            <div class="fontwhite">Ludovico Einaudi</div>
                         </div>
                     </div>
                 </div>
