--- a/index.html
+++ b/index.html
@@ -20,10 +20,19 @@
                     <div>
                         <img class="logo" src="img/logo.svg">
                     </div>
-                    <div>
-                        <div class="fontsmall fontgrey"><img class="side-icons" src="img/home.svg" alt="">Home</div>
-                        <div class="fontsmall fontgrey"><img class="side-icons" src="img/search.svg" alt="">Cerca</div>
-                        <div class="fontsmall fontgrey"><img class="side-icons" src="img/libreria.svg" alt="">La tua libreria</div>
+                    <div class="icon-flex">
+                        <div class="flex-space fontsmall fontgrey">
+                            <img class="side-icons" src="img/home.svg" alt="">
+                            <span>Home</span>
+                        </div>
+                        <div class="flex-space fontsmall fontgrey">
+                            <img class="side-icons" src="img/search.svg" alt="">
+                            <span>Cerca</span>
+                        </div>
+                        <div class="flex-space fontsmall fontgrey">
+                            <img class="side-icons" src="img/libreria.svg" alt="">
+                            <span>La tua libreria</span>
+                        </div>
                     </div>
                 </div>
                 <div class="playlist">
@@ -32,7 +41,7 @@
                         <div class="plus-bg fontblack"><i class="fa-solid fa-plus"></i></div>
                         <span class="fontgrey">Crea playlist</span>
                     </div>
-                    <ul class="list-none fontgrey">
+                    <ul class="list-none fontgrey fontsmall">
                         <li>Nome Playlist</li>
                         <li>Nome Playlist</li>
                         <li>Nome Playlist</li>
