adds player left section

--- a/index.html
+++ b/index.html
@@ -160,8 +160,22 @@
         </div>
 
         <!-- PLAYER -->
-        <div class="bg-grey flex-shrink fontwhite">
-            PLAYPLAYPLAY
+        <div class="player-flex bg-grey flex-shrink fontwhite">
+            <div class="player-left">
+                <div class="music-playing">
+                    <img class="small-music" src="img/sinister.jpeg">
+                    <div class="fontsmall">
+                        <div>Sinister</div>
+                        <div class="fontgrey">Brano nome</div>
+                    </div>
+                </div>
+                <div class="flex-hf fontgrey">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
+            </div>
+            <div>lettore</div>
+            <div>Volume</div>
         </div>
     </div>
 </body>
