--- a/index.html
+++ b/index.html
@@ -174,8 +174,30 @@
                     <i class="fa-regular fa-folder"></i>
                 </div>
             </div>
-            <div>lettore</div>
-            <div>Volume</div>
+            <div class="player-center">
+                <div class="opt-music">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-regular fa-circle-play fa-2x"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-arrow-rotate-right"></i>
+                </div>
+                <div class="opt-music">
+                    <div class="fontsmall">0:25</div>
+                    <div class="slidecontainer">
+                        <input type="range" min="1" max="100" value="20" class="slider">
+                    </div>
+                    <div class="fontsmall">4:35</div>
+                </div>
+            </div>
+            <div class="player-right">
+                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <div class="slidecontainer">
+                    <input type="range" min="1" max="100" value="20" class="slider-small">
+                </div>
+            </div>
         </div>
     </div>
 </body>
