adds hover effects

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                         <div class="plus-bg fontblack"><i class="fa-solid fa-plus"></i></div>
                         <span class="fontgrey">Crea playlist</span>
                     </div>
-                    <ul class="list-none fontgrey fontsmall">
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
+                    <ul class="list-none fontsmall">
+                        <li class="fontgrey">Nome Playlist</li>
+                        <li class="fontgrey">Nome Playlist</li>
+                        <li class="fontgrey">Nome Playlist</li>
+                        <li class="fontgrey">Nome Playlist</li>
+                        <li class="fontgrey">Nome Playlist</li>
+                        <li class="fontgrey">Nome Playlist</li>
+                        <li class="fontgrey">Nome Playlist</li>
                     </ul>
                 </div>
                 <div class="user">
@@ -70,13 +70,13 @@
                 </div>
                 <!-- MUSICA -->
                 <div class="flex-grow overflow padding-main">
-                    <div class="navbar fontgrey fontsmall">
-                        <span>IN EVIDENZA</span>
-                        <span>PODCAST</span>
-                        <span>CLASSIFICHE</span>
-                        <span>GENERI E MOOD</span>
-                        <span>NUOVE USCITE</span>
-                        <span>SCOPRI</span>
+                    <div class="navbar fontsmall">
+                        <span class="fontgrey">IN EVIDENZA</span>
+                        <span class="fontgrey">PODCAST</span>
+                        <span class="fontgrey">CLASSIFICHE</span>
+                        <span class="fontgrey">GENERI E MOOD</span>
+                        <span class="fontgrey">NUOVE USCITE</span>
+                        <span class="fontgrey">SCOPRI</span>
                     </div>
                     <h2 class="fontwhite">Recently Played</h2>
                     <div class="flex-music">
@@ -85,46 +85,46 @@
                                 <img class="music-img" src="img/metal_lifting.jpg">
                             </div>
                             <div class="fontwhite">Heavy Metal</div>
-                            <div class="fontgrey fontsmall">Subtitle</div>
+                            <div class="fontgrey-main fontsmall">Subtitle</div>
                         </div>
                         <div class="card-music-played">
                             <div>
                                 <img class="music-img" src="img/stranger.jpeg">
                             </div>
                             <span class="fontwhite">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</span>
-                            <span class="fontgrey fontsmall">Kyle Dixon & Michael Stein</span>
+                            <span class="fontgrey-main fontsmall">Kyle Dixon & Michael Stein</span>
                         </div>
                         <div class="card-music-played">
                             <div>
                                 <img class="music-img" src="img/aquietplace.jpeg">
                             </div>
                             <span class="fontwhite">A quiet place</span>
-                            <span class="fontgrey fontsmall">Subtitle</span>
+                            <span class="fontgrey-main fontsmall">Subtitle</span>
                         </div>
                         <div class="card-music-played">
                             <div>
                                 <img class="music-img" src="img/split.jpeg">
                             </div>
                             <span class="fontwhite">Split</span>
-                            <span class="fontgrey fontsmall">Subtitle</span>
+                            <span class="fontgrey-main fontsmall">Subtitle</span>
                         </div>
                         <div class="card-music-played">
                             <div>
                                 <img class="music-img" src="img/cure.jpeg">
                             </div>
                             <span class="fontwhite">A cure for wellness</span>
-                            <span class="fontgrey fontsmall">Subtitle</span>
+                            <span class="fontgrey-main fontsmall">Subtitle</span>
                         </div>
                         <div class="card-music-played">
                             <div>
                                 <img class="music-img" src="img/sinister.jpeg">
                             </div>
                             <span class="fontwhite">Sinister</span>
-                            <span class="fontgrey fontsmall">Subtitle</span>
+                            <span class="fontgrey-main fontsmall">Subtitle</span>
                         </div>
                     </div>
                     <h2 class="fontwhite">Creato per John Doe</h2>
-                    <span class="fontgrey fontsmall">Più ascolti, più accurati saranno i suggerimenti</span>
+                    <span class="fontgrey-main fontsmall">Più ascolti, più accurati saranno i suggerimenti</span>
                     <div class="flex-music">
                         <div class="card-music-played">
                             <div>
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <h2 class="fontwhite">Artisti più popolari</h2>
-                    <span class="fontgrey fontsmall">Più ascolti, più saranno accurati i tuoi suggerimenti</span>
+                    <span class="fontgrey-main fontsmall">Più ascolti, più saranno accurati i tuoi suggerimenti</span>
                     <div class="flex-music">
                         <div class="card-music-played">
                             <div>
@@ -166,12 +166,12 @@
                     <img class="small-music" src="img/sinister.jpeg">
                     <div class="fontsmall">
                         <div>Sinister</div>
-                        <div class="fontgrey">Brano nome</div>
+                        <div class="fontgreyname">Brano nome</div>
                     </div>
                 </div>
-                <div class="flex-hf fontgrey">
-                    <i class="fa-regular fa-heart"></i>
-                    <i class="fa-regular fa-folder"></i>
+                <div class="flex-hf">
+                    <span class="fontgrey"><i class="fa-regular fa-heart"></i></span>
+                    <span class="fontgrey"><i class="fa-regular fa-folder"></i></span>
                 </div>
             </div>
             <div class="player-center">
@@ -190,7 +190,7 @@
                     <div class="fontsmall">4:35</div>
                 </div>
             </div>
-            <div class="player-right">
+            <div class="player-right fontsm">
                 <i class="fa-solid fa-bars"></i>
                 <i class="fa-solid fa-desktop"></i>
                 <i class="fa-solid fa-volume-high"></i>
