adds wrap to navbar

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
                 <!-- MUSICA -->
                 <div class="flex-grow overflow padding-main">
                     <div class="navbar fontsmall">
-                        <span class="fontgrey">IN EVIDENZA</span>
-                        <span class="fontgrey">PODCAST</span>
-                        <span class="fontgrey">CLASSIFICHE</span>
-                        <span class="fontgrey">GENERI E MOOD</span>
-                        <span class="fontgrey">NUOVE USCITE</span>
-                        <span class="fontgrey">SCOPRI</span>
+                        <span class="navspace fontgrey">IN EVIDENZA</span>
+                        <span class="navspace fontgrey">PODCAST</span>
+                        <span class="navspace fontgrey">CLASSIFICHE</span>
+                        <span class="navspace fontgrey">GENERI E MOOD</span>
+                        <span class="navspace fontgrey">NUOVE USCITE</span>
+                        <span class="navspace fontgrey">SCOPRI</span>
                     </div>
                     <h2 class="fontwhite">Recently Played</h2>
                     <div class="flex-music">
