add first media query

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </div>
                 <div class="opt-music">
                     <div class="fontsmall">0:25</div>
-                    <div class="slidecontainer">
+                    <div class="slidercontainer">
                         <input type="range" min="1" max="100" value="20" class="slider">
                     </div>
                     <div class="fontsmall">4:35</div>
