--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                     <div class="icon-flex">
                         <div class="flex-space fontsmall fontgrey">
                             <img class="side-icons" src="img/home.svg" alt="">
-                            <span>Home</span>
+                            <span class="display-min-none">Home</span>
                         </div>
                         <div class="flex-space fontsmall fontgrey">
                             <img class="side-icons" src="img/search.svg" alt="">
-                            <span>Cerca</span>
+                            <span class="display-min-none">Cerca</span>
                         </div>
                         <div class="flex-space fontsmall fontgrey">
                             <img class="side-icons" src="img/libreria.svg" alt="">
-                            <span>La tua libreria</span>
+                            <span class="display-min-none">La tua libreria</span>
                         </div>
                     </div>
                 </div>
@@ -54,11 +54,11 @@
                 </div>
                 <div class="user">
                     <div class="dsp-flex fontgrey fontsmall">
-                        <span class="arrow-bg"><i class="fa-solid fa-arrow-down"></i></span><span>Installa app</span>
+                        <span class="arrow-bg"><i class="fa-solid fa-arrow-down"></i></span><span class="display-min-none">Installa app</span>
                     </div>
                     <hr>
                     <div class="dsp-flex fontwhite">
-                        <span class="user-bg"><i class="fa-solid fa-user"></i></span><span>John Doe</span>
+                        <span class="user-bg"><i class="fa-solid fa-user"></i></span><span class="display-min-none">John Doe</span>
                     </div>
                 </div>
             </div>
@@ -191,7 +191,7 @@
                     <div class="fontsmall">4:35</div>
                 </div>
             </div>
-            <div class="player-right fontsm">
+            <div class="player-right fontsmall">
                 <i class="fa-solid fa-bars"></i>
                 <i class="fa-solid fa-desktop"></i>
                 <i class="fa-solid fa-volume-high"></i>
