--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             <!-- SIDEBAR -->
             <div class="sidebar bg-black fontwhite">
                 <div class="home">
-                    <div>
-                        <img class="logo" src="img/logo.svg">
+                    <div class="logo-container">
+                        <img class="logo-big" src="img/logo.svg">
+                        <img class="logo-small" src="img/logo-small.svg">
                     </div>
                     <div class="icon-flex">
                         <div class="flex-space fontsmall fontgrey">
@@ -37,20 +38,22 @@
                     </div>
                 </div>
                 <div class="playlist">
-                    <div class="fontwhite">PLAYLIST</div>
-                    <div class="new-playlist">
-                        <div class="plus-bg fontblack"><i class="fa-solid fa-plus"></i></div>
-                        <span class="fontgrey">Crea playlist</span>
+                    <div class="playlist-none">
+                        <div class="fontwhite">PLAYLIST</div>
+                        <div class="new-playlist">
+                            <div class="plus-bg fontblack"><i class="fa-solid fa-plus"></i></div>
+                            <span class="fontgrey">Crea playlist</span>
+                        </div>
+                        <ul class="list-none fontsmall">
+                            <li class="fontgrey">Nome Playlist</li>
+                            <li class="fontgrey">Nome Playlist</li>
+                            <li class="fontgrey">Nome Playlist</li>
+                            <li class="fontgrey">Nome Playlist</li>
+                            <li class="fontgrey">Nome Playlist</li>
+                            <li class="fontgrey">Nome Playlist</li>
+                            <li class="fontgrey">Nome Playlist</li>
+                        </ul>
                     </div>
-                    <ul class="list-none fontsmall">
-                        <li class="fontgrey">Nome Playlist</li>
-                        <li class="fontgrey">Nome Playlist</li>
-                        <li class="fontgrey">Nome Playlist</li>
-                        <li class="fontgrey">Nome Playlist</li>
-                        <li class="fontgrey">Nome Playlist</li>
-                        <li class="fontgrey">Nome Playlist</li>
-                        <li class="fontgrey">Nome Playlist</li>
-                    </ul>
                 </div>
                 <div class="user">
                     <div class="dsp-flex fontgrey fontsmall">
