adds hover effects on album covers

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <div class="plus-bg fontblack"><i class="fa-solid fa-plus"></i></div>
                             <span class="fontgrey">Crea playlist</span>
                         </div>
-                        <ul class="list-none fontsmall">
+                        <ul class="playlist-list fontsmall">
                             <li class="fontgrey">Nome Playlist</li>
                             <li class="fontgrey">Nome Playlist</li>
                             <li class="fontgrey">Nome Playlist</li>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="user">
                     <div class="dsp-flex fontgrey fontsmall">
-                        <span class="arrow-bg"><i class="fa-solid fa-arrow-down"></i></span><span class="display-min-none">Installa app</span>
+                        <span class="arrow-bg fontgrey-main"><i class="fa-solid fa-arrow-down"></i></span><span class="display-min-none">Installa app</span>
                     </div>
                     <hr>
                     <div class="dsp-flex fontwhite">
@@ -85,43 +85,61 @@
                     <h2 class="fontwhite">Recently Played</h2>
                     <div class="flex-music">
                         <div class="card-music-played">
-                            <div>
+                            <div class="container-music">
                                 <img class="music-img" src="img/metal_lifting.jpg">
+                                <div class="overlay">
+                                    <span class="icon-play"><i class="fa-regular fa-circle-play fa-3x"></i></span>
+                                </div>
                             </div>
                             <div class="fontwhite">Heavy Metal</div>
                             <div class="fontgrey-main fontsmall">Subtitle</div>
                         </div>
                         <div class="card-music-played">
-                            <div>
+                            <div class="container-music">
                                 <img class="music-img" src="img/stranger.jpeg">
+                                <div class="overlay">
+                                    <span class="icon-play"><i class="fa-regular fa-circle-play fa-3x"></i></span>
+                                </div>
                             </div>
                             <span class="fontwhite">Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</span>
                             <span class="fontgrey-main fontsmall">Kyle Dixon & Michael Stein</span>
                         </div>
                         <div class="card-music-played">
-                            <div>
+                            <div class="container-music">
                                 <img class="music-img" src="img/aquietplace.jpeg">
+                                <div class="overlay">
+                                    <span class="icon-play"><i class="fa-regular fa-circle-play fa-3x"></i></span>
+                                </div>
                             </div>
                             <span class="fontwhite">A quiet place</span>
                             <span class="fontgrey-main fontsmall">Subtitle</span>
                         </div>
                         <div class="card-music-played">
-                            <div>
+                            <div class="container-music">
                                 <img class="music-img" src="img/split.jpeg">
+                                <div class="overlay">
+                                    <span class="icon-play"><i class="fa-regular fa-circle-play fa-3x"></i></span>
+                                </div>
                             </div>
                             <span class="fontwhite">Split</span>
                             <span class="fontgrey-main fontsmall">Subtitle</span>
                         </div>
                         <div class="card-music-played">
-                            <div>
+                            <div class="container-music">
                                 <img class="music-img" src="img/cure.jpeg">
+                                <div class="overlay">
+                                    <span class="icon-play"><i class="fa-regular fa-circle-play fa-3x"></i></span>
+                                </div>
                             </div>
                             <span class="fontwhite">A cure for wellness</span>
                             <span class="fontgrey-main fontsmall">Subtitle</span>
                         </div>
                         <div class="card-music-played">
-                            <div>
+                            <div class="container-music">
                                 <img class="music-img" src="img/sinister.jpeg">
+                                <div class="overlay">
+                                    <span class="icon-play"><i class="fa-regular fa-circle-play fa-3x"></i></span>
+                                </div>
                             </div>
                             <span class="fontwhite">Sinister</span>
                             <span class="fontgrey-main fontsmall">Subtitle</span>
@@ -131,14 +149,20 @@
                     <span class="fontgrey-main fontsmall">Più ascolti, più accurati saranno i suggerimenti</span>
                     <div class="flex-music">
                         <div class="card-music-played">
-                            <div>
+                            <div class="container-music">
                                 <img class="music-img" src="img/radar.jpeg">
+                                <div class="overlay">
+                                    <span class="icon-play"><i class="fa-regular fa-circle-play fa-3x"></i></span>
+                                </div>
                             </div>
                             <div class="fontwhite">Release Radar</div>
                         </div>
                         <div class="card-music-played">
-                            <div>
+                            <div class="container-music">
                                 <img class="music-img" src="img/mixdaily.jpeg">
+                                <div class="overlay">
+                                    <span class="icon-play"><i class="fa-regular fa-circle-play fa-3x"></i></span>
+                                </div>
                             </div>
                             <div class="fontwhite">Daily Mix 1</div>
                         </div>
@@ -147,14 +171,20 @@
                     <span class="fontgrey-main fontsmall">Più ascolti, più saranno accurati i tuoi suggerimenti</span>
                     <div class="flex-music">
                         <div class="card-music-played">
-                            <div>
-                                <img class="music-img" src="img/youg.jpeg">
+                            <div class="container-music">
+                                <img class="music-img artist" src="img/youg.jpeg">
+                                <div class="overlay">
+                                    <span class="icon-play"><i class="fa-regular fa-circle-play fa-3x"></i></span>
+                                </div>
                             </div>
                             <div class="fontwhite">Lana Del Rey</div>
                         </div>
                         <div class="card-music-played">
-                            <div>
-                                <img class="music-img" src="img/einaudi.jpeg">
+                            <div class="container-music">
+                                <img class="music-img artist" src="img/einaudi.jpeg">
+                                <div class="overlay">
+                                    <span class="icon-play"><i class="fa-regular fa-circle-play fa-3x"></i></span>
+                                </div>
                             </div>
                             <div class="fontwhite">Ludovico Einaudi</div>
                         </div>
